<resources>
    <string name="app_name">Yatti</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="titulo_login">Inicio de Sesión</string>
    <string name="usuario_login">Usuario</string>
    <string name="contraseña_login">Contraseña</string>
    <string name="recuperar_login">Recuperar Contraseña</string>
    <string name="registrarse_login">Registrarse</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_menu_cliente">menu_cliente</string>
    <string name="title_activity_menu_administracion">menu_administracion</string>
    <string name="title_activity_menu_ventas">menu_ventas</string>
    <string name="title_activity_menu_fabrica">menu_fabrica</string>

    <string name="nombre_pantalla_solservi">Nombre:</string>
    <string name="cantidad_garrafones_pantalla_solservi">Cantidad de Garrafones:</string>
    <string name="geoposicionamiento_pantalla_solservi">Geoposicionamiento:</string>

    <string name="cantidad_garrafon_lav">Cantidad de garrafones lavados:</string>

    <string name="cargo_entradas_salidas">Cargo:</string>
    <string name="hora_entrada">Hoara de Entrada:</string>
    <string name="hora_inicio_ruta">Hora de Inicio a Ruta:</string>
    <string name="hora_venta">Hoara de Venta:</string>
    <string name="hora_abastecimiento">Hora de Abastecimiento:</string>
    <string name="hora_salida">Hora de Salida:</string>


    <string name="fecha_quejas">Fecha:</string>
    <string name="hora_quejas">Hora:</string>
    <string name="quejas_quejas">Quejas:</string>
    <string name="sugerencia_quejas">Sugerencias:</string>

    <string name="nombre_vendedor">Nombre del Vendedor:</string>
    <string name="kilometraje">Kilometraje:</string>
    <string name="gasolina">Gasolina:</string>

    <string name="button_alta_personal">Alta Personal</string>
    <string name="button_alta_cliente">Alta Clientes</string>
    <string name="button_promociones">Promociones</string>

    <string name="fecha_nacimiento">Fecha de Nacimiento:</string>
    <string name="curp">Curp</string>
    <string name="direccion">Direccion:</string>
    <string name="telefono">Telefono:</string>
    <string name="perfil">Perfil:</string>
    <string name="observacion">Observaciones:</string>

    <string name="ciudad_txt">Ciudad:</string>
    <string name="colonia_txt">Colonia:</string>
    <string name="Calle_txt">Calle:</string>
    <string name="numero_casa_txt">Numero de Casa:</string>
    <string name="ubicacion_txt">Ubicacion:</string>


</resources>
